Restyling the webpages (Picutre size, info box size, automating the margins and padding to avoid overwrtting the text alignment).

--- a/styles/funfact-style.css
+++ b/styles/funfact-style.css
@@ -1,4 +1,5 @@
 * {
+    text-align: center;
     margin: 5px;
     padding: 5px;
     font-family:'Courier New', Courier, monospace;
@@ -7,14 +8,12 @@
   }
 
 .fact-box{
+    width: 1500px;
+    margin-left: auto;
+    margin-right: auto;
     background-color: white;
-    width: 550px;
     border-radius: 10px;
   }
-
-.facts-title{
-    text-align: center;
-}
 
 .text-format{ 
     color: black;
@@ -24,7 +23,7 @@
   }
 
 .image-style{
-    width: 530px;
-    height: 235px;
+    width: 600px;
+    height: 300px;
     border-radius: 10px;
   }
